welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: not found: value abs
  if (abs(a-b)>=10 || abs(a-c)>=10 || abs(b-c)>=10)
      ^lessBy10:2: error: not found: value abs
  if (abs(a-b)>=10 || abs(a-c)>=10 || abs(b-c)>=10)
                      ^lessBy10:2: error: not found: value abs
  if (abs(a-b)>=10 || abs(a-c)>=10 || abs(b-c)>=10)
                                      ^