welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  if (abs(a-b)>=10 || abs(a-c)>=10 || abs(b-c)>=10)
  	return true
  else
  	return false
}